fix(upsert): delta writer tests